--- a/Index.html
+++ b/Index.html
@@ -6,5 +6,6 @@
         <h1>This text is in a h1 tag</h1>
         <h2>This text is in a h1 tag</h2>
         <p>This is a paragraph</p>
+        <p>This is another paragraph</p>
     </body>
 </html>
